--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "@testing-library/user-event": "^12.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "redux": "^4.0.5",
+    "web-vitals": "^0.2.4",
+    "redux-logger": "*",
+    "redux-thunk": "*"
   },
   "scripts": {
     "start": "react-scripts start",
