--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://matiishynandrii31.github.io/countryProject",
   "name": "countries-project",
   "version": "0.1.0",
   "private": true,
@@ -7,17 +8,21 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-redux": "^7.2.2",
+    "react-router-dom": "*",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
-    "web-vitals": "^0.2.4",
     "redux-logger": "*",
     "redux-thunk": "*",
     "uuid": "*",
-    "react-router-dom": "*"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
